@@ -37,6 +37,7 @@ ikiwiki (2.41) UNRELEASED; urgency=low
   * Several destpage fixes in plugins.
   * Use absolute url for feedurl when filling out the feed templates.
     Closes: #470530
+  * Fix expiry of old recentchanges changeset pages.
 
  -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100
 
